--- a/client/src/app/component/items.component.html
+++ b/client/src/app/component/items.component.html
@@ -22,7 +22,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of orderitems">
-                            <td>{{item.item}}</td>
+                            <td>{{item._id.item}}</td>
                             <td>{{item.count}}</td>                            
                         </tr>
                     </tbody>
