--- a/client/src/app/component/order.component.html
+++ b/client/src/app/component/order.component.html
@@ -49,7 +49,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let order of orders">
+                        <tr *ngFor="let order of orders" *ngIf="order?.orderId">
                             <td>{{order.orderId}}</td>
                             <td>{{order.company}}</td>
                             <td>{{order.address}}</td>
